--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,1 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-/* Hide scrollbar but keep scrolling enabled */
-.scrollbar-hide::-webkit-scrollbar {
-    display: none;
-  }
-  
-  .scrollbar-hide {
-    scrollbar-width: none;
-  }
-  
+@import "tailwindcss";
